# qemu-h8300

./: arch_init.c  configure  meson.build
configs/targets/: h8300-softmmu.mak
default-configs/: h8300-softmmu.mak
hw/: Kconfig  meson.build
hw/char/: renesas_sci.c
hw/h8300/: Kconfig  Makefile.objs  edosk2674.c  h83069.c  h8s2674.c  kanebebe.c  meson.build
hw/intc/: Kconfig  Makefile.objs  h8300h_intc.c  h8s_intc.c  meson.build  rx_icu.c  sh2_intc.c  sh_intc-qom.c  sh_intc-ysato.c
hw/net/: Kconfig  Makefile.objs  meson.build  ne2000-local.c  smc91c111.c
hw/timer/: Kconfig  Makefile.objs  meson.build  renesas_16timer.c  renesas_tmr.c  renesas_tpu.c
include/disas/: dis-asm.h
include/hw/: registerfields.h
include/hw/char/: renesas_sci.h
include/hw/h8300/: h83069.h  h8s2674.h
include/hw/intc/: h8300h_intc.h  h8s_intc.h
include/hw/net/: ne2000-local.h  smc91c111.h
include/hw/timer/: renesas_16timer.h  renesas_tmr.h  renesas_tpu.h
include/qemu/: bitops.h
include/sysemu/: arch_init.h
qapi/: machine.json
scripts/: decodetree.py
